# a_or_cname

./: .gitattributes  Makefile  README.md  a_or_cname.Rmd  index.Rmd  index.html
analysis/: index.Rmd  render.R
analysis/ietf-dnsop-2018-11-21/: index.Rmd
analysis/journal-cyber-policy-2019/: index.Rmd  interactcadsample.bib
collector/: Cargo.toml  Dockerfile
collector/migrations/2019-04-14-000000_create_domains/: down.sql  up.sql
collector/src/: dns.rs  lib.rs  model.rs  schema.rs
collector/src/dns/: mod.rs  query.rs
collector/src/model/: domain.rs  mod.rs  record.rs
data/: top1m_cnames.csv
data/ietf/: top1m_cnames.csv
resources/2019-08-15/: top-1m.csv
